[package]
name = "exchange_center_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
config = {version = "0.13.3"}
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
readonly = "0.2.11"
serde = { version = "1.0.192", features = ["derive"]}
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
