[package]
name = "exchange_center_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features=["serde"]}
lazy_static = "1.4.0"
once_cell = "1.18.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
uuid = {version = "1.6.1", features = ["v4"]}
